--- a/src/includes/tourisme/_headtext.pug
+++ b/src/includes/tourisme/_headtext.pug
@@ -1,16 +1,13 @@
 //-Header Tourisme Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
-        mj-text(padding="5px 10px" mj-class="T36-900 c0") Donnez un nouvel élan à votre avenir dans le Tourisme&nbsp;!
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un #[span(style="font-weight:700;color:#1a1a1a;") programme diplômant en alternance] qui vous permet de conjuguer apprentissage théorique et expérience professionnelle.
-        mj-text(padding="0px 10px" padding-top="5px" mj-class="T16-400 cT0") Lors de cette journée, #[span(style="font-weight:700;color:#1F3C90;") samedi 21 juin], vous pourrez #[span(style="font-weight:700;color:#1F3C90;") de 9h30 à 13h]&nbsp;:
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#1F3C90;") &#x25CF;] Explorer un #[span(style="font-weight:700;color:#1a1a1a;") campus moderne],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#1F3C90;") &#x25CF;] Échanger avec des #[span(style="font-weight:700;color:#1a1a1a;") experts] et des #[span(style="font-weight:700;color:#1a1a1a;") étudiants],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#1F3C90;") &#x25CF;] Assister à des #[span(style="font-weight:700;color:#1a1a1a;") présentations détaillées] sur nos #[span(style="font-weight:700;color:#1a1a1a;") formations], notamment en #[span(style="font-weight:700;color:#1a1a1a;") alternance],
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="color:#1F3C90;") &#x25CF;] Obtenir des réponses à vos questions sur les #[span(style="font-weight:700;color:#1a1a1a;") admissions] et la #[span(style="font-weight:700;color:#1a1a1a;") vie étudiante],
-        mj-text(padding="0px 10px" padding-bottom="5px" mj-class="T16-400 cT0") #[span(style="color:#1F3C90;") &#x25CF;] Découvrir les nombreuses #[span(style="font-weight:700;color:#1a1a1a;") perspectives de carrière offertes par le tourisme.]
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.
+        mj-text(padding="5px 10px" mj-class="T36-900 c0") Paroursup ne vous a pas donné de réponse positive&nbsp;?
+        mj-text(padding="5px 10px" mj-class="T36-900 c0") Rassurez-vous, tout est encore possible.
+        mj-text(padding="10px 10px" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir.
+        mj-text(padding="10px 10px" mj-class="T16-400 cT0") Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") le tourisme].
+        mj-text(padding="10px 10px" mj-class="T16-400 cT0") Chez #[span(style="font-weight:700;color:#1a1a1a;") Ecosup Campus], nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, #[span(style="font-weight:700;color:#1a1a1a;") ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir], mais un vrai dialogue, humain et bienveillant, avec chaque candidat.
+        mj-text(padding="10px 10px" mj-class="T16-400 cT0") Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, ce que vous veniez de Parcoursup ou non. #[span(style="font-weight:700;color:#1a1a1a;") Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine].
+        mj-text(padding="10px 10px" mj-class="T16-700 cT1") Rejoignez-nous et donnez un vrai cap à votre avenir.
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
